--- a/Style/style_footer.css
+++ b/Style/style_footer.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -5,11 +7,11 @@
 }
 footer{
     background-color: #1F2732;
-    height: 100vh;
+    height: 115vh;
 }
 .footer{
     display: flex;
-    height: 100vh;
+    height: 115vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -23,24 +25,24 @@ footer{
 }
 .Footer_Medio{display: flex;gap: 50px;width: 185vh;}
 .Footer_Medio a{
-    font-family: Outfit;
+    font-family: "Outfit";
     font-size: 18px;
     text-align: left;
     text-decoration: none;
-    color: white;
+    color: #D7D7D7;
     cursor: pointer;
 }
 .Footer_Medio h4{
-    font-family: Outfit;
+    font-family: "Outfit";
     font-size: 18px;
-    font-weight: 10;
+    font-weight: 300;
     color: #D7D7D7 ;
 }
 .Titulos_Footer{display: flex;flex-direction: column;gap: 15px;}
 .Titulos_Footer h3{
-    color: #D7D7D7;
-    font-family: Cormorant Garamond;
-    font-size: 22px;
+    color: white;
+    font-family: "Cormorant Garamond";
+    font-size: 30px;
     font-weight: 300;
     letter-spacing: 0em;
     text-align: left;
@@ -51,7 +53,7 @@ footer{
 .Container{display: flex;flex-direction: column;gap: 40px;width: 242px;}
 .Quick_Cuerpo{
 display: flex;
-color: white;
+color: #D7D7D7;
 gap: 30px;
 }
 .Quicks{
@@ -63,12 +65,10 @@ gap: 15px;
 display: flex;
 flex-direction: column;    
 gap: 15px;
-color: white;
 }
 .Contact_Cuerpo{
     display: flex;
     flex-direction: column;
-    color: white;
     gap: 40px;
 }
 .Footer_Final{
@@ -86,13 +86,11 @@ color: white;
     align-items: center;
 }
 .Copyright{
-    font-family: Outfit;
+    font-family: "Outfit";
     font-size: 18px;
     font-weight: 400;
     text-align: left;
     color: #D7D7D7;
-
-
 }
 .Copyright span{
     color: #D1B06B ;
@@ -106,7 +104,7 @@ color: white;
     height: 20px;
 }
 .Redes h4{
-    font-family: Outfit;
+    font-family: "Outfit";
     font-size: 20px;
     font-weight: 400;
     text-align: left;
