--- a/Style/Homepage.css
+++ b/Style/Homepage.css
@@ -208,7 +208,7 @@
 }
 
 .article p {
-    font-family: Outfit;
+    font-family: "Outfit";
     font-size: 17px;
     font-weight: 400;
     line-height: 23px;
