--- a/Style/style_footer.css
+++ b/Style/style_footer.css
@@ -6,27 +6,31 @@
     box-sizing: border-box;
 }
 footer{
-    background-color: #1F2732;
+    background-color: hsl(215, 23%, 16%);
     height: 115vh;
+    padding: 8%;
 }
 .footer{
     display: flex;
-    height: 115vh;
+    height: 100%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 55px;
 }
 .Footer_Encabezado{
-    width: 185vh;
+    width: 100%;
 }
 .Footer_Encabezado img{
-    width: 185vh;
+    width: 100%;
 }
-.Footer_Medio{display: flex;gap: 50px;width: 185vh;}
+.Footer_Medio{display: flex;
+    gap: 50px;
+    width: 100%;
+}
 .Footer_Medio a{
     font-family: "Outfit";
-    font-size: 18px;
+    font-size: 20px;
     text-align: left;
     text-decoration: none;
     color: #D7D7D7;
@@ -34,11 +38,14 @@ footer{
 }
 .Footer_Medio h4{
     font-family: "Outfit";
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 300;
     color: #D7D7D7 ;
 }
-.Titulos_Footer{display: flex;flex-direction: column;gap: 15px;}
+.Titulos_Footer{display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
 .Titulos_Footer h3{
     color: white;
     font-family: "Cormorant Garamond";
@@ -50,7 +57,12 @@ footer{
 .Titulos_Footer hr{
     border-color: #838393cc;
 }
-.Container{display: flex;flex-direction: column;gap: 40px;width: 242px;}
+.Container{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    width:100%;
+}
 .Quick_Cuerpo{
 display: flex;
 color: #D7D7D7;
@@ -74,7 +86,7 @@ gap: 15px;
 .Footer_Final{
     display: flex;
     flex-direction: column;
-    width: 185vh;
+    width: 100%;
 }
 .Footer_Final hr{
     border-color: #838393cc
@@ -87,7 +99,7 @@ gap: 15px;
 }
 .Copyright{
     font-family: "Outfit";
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 400;
     text-align: left;
     color: #D7D7D7;
