--- a/Style/Homepage.css
+++ b/Style/Homepage.css
@@ -7,18 +7,21 @@
     background-image: url(/imgs/Img-Homepage/Banner-Fondo.png);
     background-color: #1F2732;
     position: relative;
+    padding: 3% 13% 0 13%;
 }
 .Presentacion {
-    position: relative;
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
+.Banner_Peter{
+    height: 94vh;
 }
 .Titulo {
     display: flex;
     flex-direction: column;
-    width: 70vh;
-    position: absolute;
+    width: 72vh;
     gap: 20px;
-    top: 30%;
-    left: 13%;
 }
 .Titulo h1 {
     font-family: "Cormorant Garamond";
@@ -53,6 +56,7 @@
     width: 284px;
     height: 100px;
     background-color: #D1B06B;
+    border: none;
 }
 
 
@@ -276,16 +280,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20%;
-    height: 120vh;
+    padding: 7% 11% 0 11%;
+    height: 135vh;
 }
 .Counters_Cuerpo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     gap: 50px;
     width: 100%;
+    height: 100%;
 }
 .Counters_Cuerpo hr {
     border: 1px solid rgb(203, 203, 203);
@@ -296,6 +300,7 @@
     flex-direction: column;
     align-items: center;
     gap: 50px;
+    width: 100%;
 }
 .Counters_Encabezado p {
     font-family: "Outfit";
@@ -329,20 +334,26 @@
     display: flex;
     gap: 40px;
     justify-content: space-between;
+    width: 100%;
 }
 .statistics {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 15px;
+    background-color: #FBFBFB;
+    width: 100%;
 }
 .statistics h4 {
     font-family: "Cormorant Garamond";
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 700;
     letter-spacing: 0em;
     text-align: left;
     color: rgb(22, 29, 39);
+}
+.statistics img{
+    width: 100px;
 }
 .statistics span {
     font-family: "Outfit";
@@ -357,15 +368,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 100px;
+    width: 100%;
 }
 .Logos {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 160px;
     width: 100%;
-    gap: 15%;
+}
+.Logo_Encabezado{
+    width: 40%;
 }
 
 
