--- a/Style/style_footer.css
+++ b/Style/style_footer.css
@@ -7,8 +7,7 @@
 }
 footer{
     background-color: hsl(215, 23%, 16%);
-    height: 115vh;
-    padding: 8%;
+    padding: 14%;
 }
 .footer{
     display: flex;
@@ -16,7 +15,7 @@ footer{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 55px;
+    gap: 150px;
 }
 .Footer_Encabezado{
     width: 100%;
@@ -24,8 +23,9 @@ footer{
 .Footer_Encabezado img{
     width: 100%;
 }
-.Footer_Medio{display: flex;
-    gap: 50px;
+.Footer_Medio{
+    display: flex;
+    gap: 100px;
     width: 100%;
 }
 .Footer_Medio a{
@@ -42,14 +42,15 @@ footer{
     font-weight: 300;
     color: #D7D7D7 ;
 }
-.Titulos_Footer{display: flex;
+.Titulos_Footer{
+    display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 30px;
 }
 .Titulos_Footer h3{
     color: white;
     font-family: "Cormorant Garamond";
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 300;
     letter-spacing: 0em;
     text-align: left;
