--- a/Style/Change_log.css
+++ b/Style/Change_log.css
@@ -41,17 +41,22 @@
 }
 .contenedor_change{
     width: 100%;
-    padding-top: 18% ;
-    padding-bottom: 18%;
     background: #1F2732;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 330px;
+    padding: 20% 20% 0 20%;
+}
+body hr{
+    width: 100%;
+    border: 1px solid #4E555F;
 }
 .contenedor_naranja{
     background: #D1B06B;
-    width: 40%;
-    height: 200px;
+    width: 100%;
+    height: 40vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -89,4 +94,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 140%; 
+}
+footer{
+    gap: 200px;
+    display: flex;
+    flex-direction: column;
 }
