--- a/Style/Homepage.css
+++ b/Style/Homepage.css
@@ -278,7 +278,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 7% 11% 0 11%;
+    padding: 7% 11% 7% 11%;
 }
 .Counters_Cuerpo {
     display: flex;
